# daisy_rsx

./: Cargo.toml  index.html  justfile
public/: tailwind.css
src/: main.rs
src/components/: avatar.rs  mod.rs
