cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "daisy_rsx"
version = "0.1.0"
edition = "2021"

[dependencies]
manganis = { version = "*" }
dioxus = { version = "0.6.0-alpha.2", features = ["web", "router"] }
serde = { version = "1.0.208", features = ["derive"] }


[profile.dev]
opt-level = 1
overflow-checks = false
lto = "thin"
panic = "unwind"
codegen-units = 32
incremental = true           # Compile your binary in smaller steps.
rustflags = ["-Zthreads=16"] # Better compile performance.

[profile.release]
codegen-units = 1                             # Allows LLVM to perform better optimization.
lto = true                                    # Enables link-time-optimizations.
opt-level = "s"                               # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"                               # Higher performance by disabling panic handlers.
strip = true                                  # Ensures debug symbols are removed.
trim-paths = "all"                            # Removes potentially privileged information from your binaries.
rustflags = ["-Cdebuginfo=0", "-Zthreads=16"] # Better compile performance.
